posiGen_FullsendBox/src/objects/SPE__c.object
<CustomObject>
    <fields>
        <fullName>Funding_Traunche__c</fullName>
        <label>Funding Traunche</label>
        <picklist>
            <picklistValues>
                <fullName>ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Month_of_Fiscal_Year__c</fullName>
        <label>Last Month of Fiscal Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Acroynm / Short Name of the SPE</inlineHelpText>
        <label>Short Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SPE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Short_Name__c</columns>
        <columns>NAME</columns>
        <columns>Funding_Traunche__c</columns>
        <columns>Last_Month_of_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SPE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>